[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapyd-client"
version = "2.0.2"
authors = [{name = "Scrapy developers", email = "info@scrapy.org"}]
description = "A client for Scrapyd"
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/scrapy/scrapyd-client"}
classifiers = [
    "Framework :: Scrapy",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pip",  # uberegg
    "requests",
    "scrapy>=0.17",
    "setuptools",
    "uberegg>=0.1.1",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-console-scripts",
    "pytest-mock",
]

[project.scripts]
scrapyd-deploy = "scrapyd_client.deploy:main"
scrapyd-client = "scrapyd_client.__main__:main"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PTH",
    "FBT002",  # positional boolean
    "S113",  # timeout
    "S310",  # URL scheme
    "S603",  # untrusted input
    "S607",  # executable path
    "T201",  # print
    "TRY003" , # errors
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
